api: add swagger docs for proxy controller
