# src/go-rest-api/docs/swagger.yaml
@@ -710,10 +710,6 @@ definitions:
     - 1000000000
     - 60000000000
     - 3600000000000
-    - 1
-    - 1000
-    - 1000000
-    - 1000000000
     type: integer
     x-enum-varnames:
     - minDuration
@@ -732,10 +728,6 @@ definitions:
     - Second
     - Minute
     - Hour
-    - Nanosecond
-    - Microsecond
-    - Millisecond
-    - Second
 host: api.plusvasis.xyz
 info:
   contact: {}
@@ -892,6 +884,79 @@ paths:
       summary: ReadJobAllocs
       tags:
       - nomad
+  /job/{id}/exec:
+    get:
+      consumes:
+      - application/json
+      description: Execute commands in a Nomad job allocation via WebSockets
+      parameters:
+      - description: Allocation ID
+        in: path
+        name: id
+        required: true
+        type: string
+      - description: Command to execute
+        in: query
+        name: command
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/echo.HTTPError'
+        "404":
+          description: Not Found
+        "500":
+          description: Internal Server Error
+        "502":
+          description: Bad Gateway
+      security:
+      - BearerAuth: []
+      summary: AllocExec
+      tags:
+      - proxy
+  /job/{id}/logs:
+    get:
+      description: Stream logs from a Nomad job allocation
+      parameters:
+      - description: Job ID
+        in: path
+        name: id
+        required: true
+        type: string
+      - description: Task name (same as job name)
+        in: query
+        name: task
+        required: true
+        type: string
+      - description: Log type (stdout or stderr)
+        in: query
+        name: type
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+        "400":
+          description: Bad Request
+        "401":
+          description: Unauthorized
+        "404":
+          description: Not Found
+        "500":
+          description: Internal Server Error
+      security:
+      - BearerAuth: []
+      summary: StreamLogs
+      tags:
+      - proxy
   /job/{id}/restart:
     post:
       description: Restart a Nomad job
